Fix buy tickets button visibility

--- a/client/src/domain/eventSearch/eventCard.module.scss
+++ b/client/src/domain/eventSearch/eventCard.module.scss
@@ -92,7 +92,7 @@ $imageWidth: 22.75rem;
     .eventPrice {
       font-size: 1rem;
       line-height: 1.875rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.25rem;
       color: $hel-black-80;
 
       @include respond_above(sm) {
@@ -103,6 +103,7 @@ $imageWidth: 22.75rem;
 
   .buttonWrapper {
     display: flex;
+    flex-wrap: wrap;
 
     @include respond_above(sm) {
       justify-content: flex-end;
@@ -116,6 +117,7 @@ $imageWidth: 22.75rem;
       }
 
       button {
+        margin-top: 0.25rem;
         margin-right: 0.25rem;
         width: 100%;
 
@@ -133,6 +135,7 @@ $imageWidth: 22.75rem;
       }
 
       button {
+        margin-top: 0.25rem;
         margin-left: 0.25rem;
         width: 100%;
       }
